tests/snapshots/code_text_fallback_param__code_text_fallback_sample_cpp_detailed.snap
---
source: tests/code_text_fallback_param.rs
assertion_line: 80
expression: out
---
#include <iostream>
… 1 more lines …
… 2 more lines …

… 4 more lines …

… 6 more lines …
