tests/snapshots/code_text_fallback_param__code_text_fallback_sample_cpp_detailed_combined.snap
---
source: tests/code_text_fallback_param.rs
expression: snap
---
STDOUT:
#include <iostream>
… 1 more lines …
… 2 more lines …

… 4 more lines …

… 6 more lines …

DEBUG (normalized):
{
  "budgets_effective": {
    "bytes": 120,
    "chars": null,
    "lines": null
  },
  "counts": {
    "included": 0,
    "omitted_children": 5,
    "total_nodes": 0
  },
  "output_stats": {
    "bytes": 106,
    "chars": 0,
    "lines": 8
  },
  "renderer": {
    "array_sampler": "default",
    "prefer_tail_arrays": false,
    "style": "detailed",
    "template": "text"
  },
  "root": {
    "children": [
      {
        "children": [
          {
            "atomic_token": "#include <iostream>",
            "id": 0,
            "index_in_parent_array": 0,
            "kind": "string",
            "metrics": {}
          }
        ],
        "id": 0,
        "index_in_parent_array": 0,
        "kind": "array",
        "metrics": {
          "array_len": 1
        }
      },
      {
        "id": 0,
        "index_in_parent_array": 1,
        "kind": "array",
        "metrics": {
          "array_len": 1
        }
      },
      {
        "id": 0,
        "index_in_parent_array": 3,
        "kind": "array",
        "metrics": {
          "array_len": 1
        }
      },
      {
        "children": [
          {
            "atomic_token": "",
            "id": 0,
            "index_in_parent_array": 0,
            "kind": "string",
            "metrics": {}
          }
        ],
        "id": 0,
        "index_in_parent_array": 4,
        "kind": "array",
        "metrics": {
          "array_len": 1
        }
      },
      {
        "children": [
          {
            "atomic_token": "",
            "id": 0,
            "index_in_parent_array": 0,
            "kind": "string",
            "metrics": {}
          }
        ],
        "id": 0,
        "index_in_parent_array": 9,
        "kind": "array",
        "metrics": {
          "array_len": 1
        }
      }
    ],
    "gaps": [
      {
        "before_child_index": 2,
        "omitted_count": 1
      },
      {
        "before_child_index": 4,
        "omitted_count": 4
      }
    ],
    "id": 0,
    "kind": "array",
    "metrics": {
      "array_len": 10
    }
  },
  "selection": {
    "top_k": 9
  },
  "template": "text"
}
