tests/snapshots/code_text_fallback_param__code_text_fallback_sample_cpp_stdout.snap
---
source: tests/code_text_fallback_param.rs
assertion_line: 142
expression: out_default
---
 1: #include <iostream>
 2: 
 3: void greet(const std::string& name) {
19: }
20:
