tests/snapshots/code_text_fallback_param__code_text_fallback_sample_cpp_strict_combined.snap
---
source: tests/code_text_fallback_param.rs
expression: snap
---
STDOUT:
 1: #include <iostream>
 2: 
 5: }
 6: 
 7: int main() {
 8:     greet("world");
19: }
20: 

DEBUG (normalized):
{
  "budgets_effective": {
    "bytes": 120,
    "chars": null,
    "lines": null
  },
  "counts": {
    "included": 0,
    "omitted_children": 0,
    "total_nodes": 0
  },
  "output_stats": {
    "bytes": 92,
    "chars": 0,
    "lines": 9
  },
  "renderer": {
    "array_sampler": "default",
    "prefer_tail_arrays": false,
    "style": "strict",
    "template": "code"
  },
  "root": {
    "children": [
      {
        "children": [
          {
            "atomic_token": "#include <iostream>",
            "id": 0,
            "index_in_parent_array": 0,
            "kind": "string",
            "metrics": {}
          }
        ],
        "id": 0,
        "index_in_parent_array": 0,
        "kind": "array",
        "metrics": {
          "array_len": 1
        }
      },
      {
        "children": [
          {
            "atomic_token": "",
            "id": 0,
            "index_in_parent_array": 1,
            "kind": "string",
            "metrics": {}
          }
        ],
        "id": 0,
        "index_in_parent_array": 1,
        "kind": "array",
        "metrics": {
          "array_len": 1
        },
        "omitted_before": 1
      },
      {
        "id": 0,
        "index_in_parent_array": 2,
        "kind": "array",
        "metrics": {
          "array_len": 2
        }
      },
      {
        "children": [
          {
            "atomic_token": "}",
            "id": 0,
            "index_in_parent_array": 4,
            "kind": "string",
            "metrics": {}
          }
        ],
        "id": 0,
        "index_in_parent_array": 3,
        "kind": "array",
        "metrics": {
          "array_len": 1
        },
        "omitted_before": 4
      },
      {
        "children": [
          {
            "atomic_token": "",
            "id": 0,
            "index_in_parent_array": 5,
            "kind": "string",
            "metrics": {}
          }
        ],
        "id": 0,
        "index_in_parent_array": 4,
        "kind": "array",
        "metrics": {
          "array_len": 1
        },
        "omitted_before": 5
      },
      {
        "children": [
          {
            "atomic_token": "int main() {",
            "id": 0,
            "index_in_parent_array": 6,
            "kind": "string",
            "metrics": {}
          },
          {
            "children": [
              {
                "atomic_token": "    greet(\"world\");",
                "id": 0,
                "index_in_parent_array": 7,
                "kind": "string",
                "metrics": {}
              }
            ],
            "id": 0,
            "index_in_parent_array": 7,
            "kind": "array",
            "metrics": {
              "array_len": 1
            },
            "omitted_before": 7
          }
        ],
        "id": 0,
        "index_in_parent_array": 5,
        "kind": "array",
        "metrics": {
          "array_len": 2
        },
        "omitted_before": 6
      },
      {
        "id": 0,
        "index_in_parent_array": 6,
        "kind": "array",
        "metrics": {
          "array_len": 3
        }
      },
      {
        "id": 0,
        "index_in_parent_array": 7,
        "kind": "array",
        "metrics": {
          "array_len": 2
        }
      },
      {
        "children": [
          {
            "atomic_token": "}",
            "id": 0,
            "index_in_parent_array": 18,
            "kind": "string",
            "metrics": {}
          }
        ],
        "id": 0,
        "index_in_parent_array": 8,
        "kind": "array",
        "metrics": {
          "array_len": 1
        },
        "omitted_before": 18
      },
      {
        "children": [
          {
            "atomic_token": "",
            "id": 0,
            "index_in_parent_array": 19,
            "kind": "string",
            "metrics": {}
          }
        ],
        "id": 0,
        "index_in_parent_array": 9,
        "kind": "array",
        "metrics": {
          "array_len": 1
        },
        "omitted_before": 19
      }
    ],
    "id": 0,
    "kind": "array",
    "metrics": {
      "array_len": 10
    }
  },
  "selection": {
    "top_k": 20
  },
  "template": "code"
}
