tests/snapshots/code_text_fallback_param__code_text_fallback_sample_go.snap
---
source: tests/code_text_fallback_param.rs
assertion_line: 77
expression: out
---
package main
…
func compute(n int) int {
  …
  for i := 0; i < n; i++ {
    …
  …
  return total
  …
…

…
