tests/snapshots/code_text_fallback_param__code_text_fallback_sample_go_combined.snap
---
source: tests/code_text_fallback_param.rs
expression: snap
---
STDOUT:
 1: package main
 2: 
 3: import "fmt"
27: 
29:     fmt.Println("value:", value)
30: }
31: 

DEBUG (normalized):
{
  "budgets_effective": {
    "bytes": 120,
    "chars": null,
    "lines": null
  },
  "counts": {
    "included": 0,
    "omitted_children": 9,
    "total_nodes": 0
  },
  "output_stats": {
    "bytes": 92,
    "chars": 0,
    "lines": 8
  },
  "renderer": {
    "array_sampler": "default",
    "prefer_tail_arrays": false,
    "style": "default",
    "template": "code"
  },
  "root": {
    "children": [
      {
        "children": [
          {
            "atomic_token": "package main",
            "id": 0,
            "index_in_parent_array": 0,
            "kind": "string",
            "metrics": {}
          }
        ],
        "id": 0,
        "index_in_parent_array": 0,
        "kind": "array",
        "metrics": {
          "array_len": 1
        }
      },
      {
        "children": [
          {
            "atomic_token": "",
            "id": 0,
            "index_in_parent_array": 1,
            "kind": "string",
            "metrics": {}
          }
        ],
        "id": 0,
        "index_in_parent_array": 1,
        "kind": "array",
        "metrics": {
          "array_len": 1
        },
        "omitted_before": 1
      },
      {
        "children": [
          {
            "atomic_token": "import \"fmt\"",
            "id": 0,
            "index_in_parent_array": 2,
            "kind": "string",
            "metrics": {}
          }
        ],
        "id": 0,
        "index_in_parent_array": 2,
        "kind": "array",
        "metrics": {
          "array_len": 1
        },
        "omitted_before": 2
      },
      {
        "children": [
          {
            "atomic_token": "",
            "id": 0,
            "index_in_parent_array": 26,
            "kind": "string",
            "metrics": {}
          },
          {
            "id": 0,
            "index_in_parent_array": 27,
            "kind": "array",
            "metrics": {
              "array_len": 1
            }
          },
          {
            "children": [
              {
                "atomic_token": "    fmt.Println(\"value:\", value)",
                "id": 0,
                "index_in_parent_array": 28,
                "kind": "string",
                "metrics": {}
              }
            ],
            "id": 0,
            "index_in_parent_array": 28,
            "kind": "array",
            "metrics": {
              "array_len": 1
            },
            "omitted_before": 28
          }
        ],
        "id": 0,
        "index_in_parent_array": 12,
        "kind": "array",
        "metrics": {
          "array_len": 3
        },
        "omitted_before": 26
      },
      {
        "children": [
          {
            "atomic_token": "}",
            "id": 0,
            "index_in_parent_array": 29,
            "kind": "string",
            "metrics": {}
          }
        ],
        "id": 0,
        "index_in_parent_array": 13,
        "kind": "array",
        "metrics": {
          "array_len": 1
        },
        "omitted_before": 29
      },
      {
        "children": [
          {
            "atomic_token": "",
            "id": 0,
            "index_in_parent_array": 30,
            "kind": "string",
            "metrics": {}
          }
        ],
        "id": 0,
        "index_in_parent_array": 14,
        "kind": "array",
        "metrics": {
          "array_len": 1
        },
        "omitted_before": 30
      }
    ],
    "gaps": [
      {
        "before_child_index": 3,
        "omitted_count": 9
      }
    ],
    "id": 0,
    "kind": "array",
    "metrics": {
      "array_len": 15
    }
  },
  "selection": {
    "top_k": 16
  },
  "template": "code"
}
