tests/snapshots/code_text_fallback_param__code_text_fallback_sample_go_default.snap
---
source: tests/code_text_fallback_param.rs
assertion_line: 80
expression: out
---
package main
…
func compute(n int) int {
  …
  …
  …
  …

  …
