tests/snapshots/code_text_fallback_param__code_text_fallback_sample_go_default_combined.snap
---
source: tests/code_text_fallback_param.rs
expression: snap
---
STDOUT:
 1: package main
 …
 9: func compute(n int) int {
  …
  …
  …
  …
  …
  …
31: 
  …

DEBUG (normalized):
{
  "budgets_effective": {
    "bytes": 120,
    "chars": null,
    "lines": null
  },
  "counts": {
    "included": 0,
    "omitted_children": 14,
    "total_nodes": 0
  },
  "output_stats": {
    "bytes": 99,
    "chars": 0,
    "lines": 12
  },
  "renderer": {
    "array_sampler": "default",
    "prefer_tail_arrays": false,
    "style": "default",
    "template": "code"
  },
  "root": {
    "children": [
      {
        "children": [
          {
            "atomic_token": "package main",
            "id": 0,
            "index_in_parent_array": 0,
            "kind": "string",
            "metrics": {}
          }
        ],
        "id": 0,
        "index_in_parent_array": 0,
        "kind": "array",
        "metrics": {
          "array_len": 1
        }
      },
      {
        "children": [
          {
            "atomic_token": "func compute(n int) int {",
            "id": 0,
            "index_in_parent_array": 8,
            "kind": "string",
            "metrics": {}
          },
          {
            "id": 0,
            "index_in_parent_array": 10,
            "kind": "array",
            "metrics": {
              "array_len": 4
            }
          },
          {
            "id": 0,
            "index_in_parent_array": 17,
            "kind": "array",
            "metrics": {
              "array_len": 1
            }
          }
        ],
        "gaps": [
          {
            "before_child_index": 1,
            "omitted_count": 1
          },
          {
            "before_child_index": 2,
            "omitted_count": 6
          }
        ],
        "id": 0,
        "index_in_parent_array": 7,
        "kind": "array",
        "metrics": {
          "array_len": 5
        },
        "omitted_before": 8
      },
      {
        "children": [
          {
            "atomic_token": "",
            "id": 0,
            "index_in_parent_array": 30,
            "kind": "string",
            "metrics": {}
          }
        ],
        "id": 0,
        "index_in_parent_array": 14,
        "kind": "array",
        "metrics": {
          "array_len": 1
        },
        "omitted_before": 30
      }
    ],
    "gaps": [
      {
        "before_child_index": 1,
        "omitted_count": 6
      },
      {
        "before_child_index": 2,
        "omitted_count": 6
      }
    ],
    "id": 0,
    "kind": "array",
    "metrics": {
      "array_len": 15
    }
  },
  "selection": {
    "top_k": 9
  },
  "template": "code"
}
